scheduler/log/yefeng/tmp/2fe30bdf2511aeb5f3226a3b0b5641fb#0/stderr.log
  File "<stdin>", line 1
    hello=[1,\"2ere\"]
                     ^
SyntaxError: unexpected character after line continuation character
